dnl Process this file with 'autoconf' to produce a 'configure' script
dnl $Id$
AC_PREREQ(2.61)
AC_REVISION($Revision$)
AC_INIT
AC_CONFIG_SRCDIR([main.c])
AC_CONFIG_HEADER(config.h:config_h.in)

AC_CANONICAL_TARGET

AC_ARG_PROGRAM
AC_PROG_CC
AC_C_CONST
AC_PROG_MAKE_SET
AC_PROG_INSTALL

### output makefile
AC_CONFIG_FILES([makefile])
AC_OUTPUT
